[package]
name = "orx-fixed-vec"
version = "3.15.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient fixed capacity vector with pinned element guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-fixed-vec/"
keywords = ["vec", "pinned", "array", "split", "fixed"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.2.0", default-features = false }
orx-pseudo-default = { version = "2.0.0", default-features = false }
orx-pinned-vec = { path = "../orx-pinned-vec" }

[[bench]]
name = "random_access"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"
