[package]
name = "orx-fixed-vec"
version = "3.16.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient fixed capacity vector with pinned element guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-fixed-vec/"
keywords = ["vec", "pinned", "array", "split", "fixed"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.16.0", default-features = false }
orx-concurrent-iter = { path = "../orx-concurrent-iter", default-features = false, optional = true }
orx-parallel = { path = "../orx-parallel", default-features = false, optional = true }

[[bench]]
name = "par_collect_map_filter_owned"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
rand_chacha = "0.9"

[features]
default = ["parallel"]
parallel = ["orx-concurrent-iter", "orx-parallel"]
