[package]
name = "orx-fixed-vec"
version = "3.21.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient fixed capacity vector with pinned element guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-fixed-vec/"
keywords = ["vec", "pinned", "array", "split", "fixed"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.20.0", default-features = false }
orx-concurrent-iter = { version = "3.1.0", default-features = false }

[[bench]]
name = "random_access"
harness = false

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
rand_chacha = "0.9"
