[package]
name = "bench_parallelization"
version = "0.1.0"
edition = "2024"
publish = ["artifactory"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rayon = { version = "1.10.0", default-features = false }
orx-fixed-vec = { path = "../../../orx-fixed-vec" }
orx-parallel = { path = "../../../orx-parallel" }
